--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           command:
             npm run frontend:build
       - run:
-          name: Back-End Install
+          name: Back-End Build
           command:
             npm run backend:build
 
